--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">Android-Advanced-Practice</string>
 
     <string name="btn_demo_schedulers">背景工作＆Concurrency</string>
+    <string name="btn_demo_buffer">累積呼叫次數</string>
+
     <string name="msg_demo_concurrency_schedulers">這是一個將長時間運行操作放置到後台線程的示範。操作完成後，我們回到主線程。\n因為將長時間運行操作放置到後台線程的，所以多次點擊按鈕後會發現不會被阻止ui操作。\n(Concurrency 為多個Threads輪流去執行)</string>
+    <string name="msg_demo_buffer">這是一個“緩存”積事件的案例。連續多次點擊下面的按鈕，會顯示兩秒內的點擊次數。</string>
+
     <string name="start_long_operation">需時處理</string>
+    <string name="tap_me">點擊我</string>
+
 </resources>
